Custom Split Normals Causes Huge Performance Lag #107505

Closed
opened 2023-05-01 17:52:33 +02:00 by Shady Hamza · 2 comments

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.61

Blender Version
Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-04-29 20:06, hash: adb63a5102cf
Worked: (newest version of Blender that worked as expected)

Short description of error
When an object has a Custom split normals in Geometry Data, it causes huge lag when editing it in edit mode and trying to move faces or verts for example, clearing the custom split normal solves the issue

PS: The attached file still feels abit laggy after clearing the split normals if you could find whats causing it let me know please, Plus I don't know if the whole issue is supposed to be that laggy or this is a bug, Thank you

Exact steps for others to reproduce the error
[Please describe the exact steps needed to reproduce the issue]
[Based on the default startup or an attached .blend file (as simple as possible)]

**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.61 **Blender Version** Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-04-29 20:06, hash: `adb63a5102cf` Worked: (newest version of Blender that worked as expected) **Short description of error** When an object has a Custom split normals in Geometry Data, it causes huge lag when editing it in edit mode and trying to move faces or verts for example, clearing the custom split normal solves the issue PS: The attached file still feels abit laggy after clearing the split normals if you could find whats causing it let me know please, Plus I don't know if the whole issue is supposed to be that laggy or this is a bug, Thank you **Exact steps for others to reproduce the error** [Please describe the exact steps needed to reproduce the issue] [Based on the default startup or an attached .blend file (as simple as possible)]
Shady Hamza added the
Priority
Normal
Status
Needs Triage
Type
Report
labels 2023-05-01 17:52:33 +02:00
Member

Thanks for the report. Is this a new problem? Were previous versions faster?

Thanks for the report. Is this a new problem? Were previous versions faster?
Hans Goudey added
Status
Needs Information from User
and removed
Status
Needs Triage
labels 2023-05-01 20:44:37 +02:00

Not sure if it's related, but I hit an assert in main when I was testing this.

If you do the following steps:

  1. Subdivide default cube any number of times
  2. Set cube to shade smooth
  3. Enable auto smooth
  4. Add custom split normals
  5. Go to edit mode

Then you hit the debug assert at bmesh_mesh_normals.cc:591

Not sure if it's related, but I hit an assert in main when I was testing this. If you do the following steps: 1. Subdivide default cube any number of times 2. Set cube to shade smooth 3. Enable auto smooth 4. Add custom split normals 5. Go to edit mode Then you hit the debug assert at bmesh_mesh_normals.cc:591
Hans Goudey self-assigned this 2023-05-02 16:01:09 +02:00
Hans Goudey added
Priority
High
and removed
Priority
Normal
labels 2023-05-02 16:01:15 +02:00
Hans Goudey added
Status
Confirmed
Type
Bug
and removed
Status
Needs Information from User
Type
Report
labels 2023-05-02 23:24:24 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-05-02 23:24:38 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#107505
No description provided.