Fix #107505: Temporary stack not cleared in BMesh normal calculation

Mistake in f8eebd3b25a52d055736.